--- a/react/goramp-react-typescript/package.json
+++ b/react/goramp-react-typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goramp-app-typescript",
+  "name": "goramp-react-typescript",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
